# cr8s

./: .gitignore  Cargo.toml  Dockerfile  ReadMe.md  docker-compose.yml
migrations/2025-07-16-191827_create_rustaceans/: up.sql
migrations/2025-07-16-191832_create_crates/: down.sql  up.sql
migrations/2025-09-09-190920_create_roles/: down.sql  up.sql
migrations/2025-09-09-190928_create_users_roles/: up.sql
src/: auth.rs  commands.rs  lib.rs  mail.rs  main.rs  models.rs  repositories.rs  schema.rs
src/rocket_routes/: authorization.rs  crates.rs  mod.rs  rustaceans.rs
templates/email/: digest.html
tests/: authorization.rs  crates.rs  rustaceans.rs
tests/common/: mod.rs
